# CMakeList.txt: проект CMake для hw2; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("hw2")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (hw2 "main.cpp" )

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
